# GildedRose-Refactoring-Kata-Python

./: README.md  gilded_rose.py  pyproject.toml  start_texttest.sh  texttest_fixture.py
texttests/: config.gr
