[tool.poetry]
name = "gildedrose-refactoring-kata-python"
version = "0.1.0"
description = ""
authors = ["Maksym Shalenyi <maksym.shalenyi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
pdbpp = "^0.10.3"
texttest = "^4.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
